# BibliotecaMagicaEDDPro1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Backend/AnalizadorArchivo/: AnalizadorArchivo.cpp  AnalizadorArchivo.h  LectorArchivo.cpp  LectorArchivo.h
Backend/AnalizadorLinea/: AnalizadorLinea.cpp  AnalizadorLinea.h
Backend/Auxiliar/: Auxiliar.cpp  Auxiliar.h
Backend/AuxiliarBusquedaB/: AuxiliarBusquedaB.cpp  AuxiliarBusquedaB.h
Backend/Biblioteca/: Biblioteca.cpp  Biblioteca.h
Backend/CreadorSVG/: CreadorSvg.cpp  CreadorSvg.h
Backend/CreadorTextoDot/: CreadorTextoDot.cpp  CreadorTextoDot.h
Backend/Cronometro/: Cronometro.cpp  Cronometro.h
Backend/EntradaUsuarioException/: EntradaUsuarioException.h
Backend/EnumBusqueda/: EnumBusqueda.cpp  EnumBusqueda.h
Backend/EstructurasDeDatos/ArbolAVL/: ArbolAVL.cpp  ArbolAVL.h
Backend/EstructurasDeDatos/ArbolAVL/NodoArbol/: NodoArbol.cpp  NodoArbol.h
Backend/EstructurasDeDatos/ArbolAVL/NodoArbolIsbn/: NodoArbolIsbn.cpp  NodoArbolIsbn.h
Backend/EstructurasDeDatos/ArbolAVL/NodoArbolTitulo/: NodoArbolTitulo.cpp  NodoArbolTitulo.h
Backend/EstructurasDeDatos/ArbolAVLPorIsbn/: ArbolAVLPorIsbn.cpp  ArbolAVLPorIsbn.h
Backend/EstructurasDeDatos/ArbolAVLPorIsbn/NodoArbolIsbn/: NodoArbolIsbn.cpp  NodoArbolIsbn.h
Backend/EstructurasDeDatos/ArbolAVLTitulo/: ArbolAVLTitulo.cpp  ArbolAVLTitulo.h
Backend/EstructurasDeDatos/ArbolAVLTitulo/NodoArbolTitulo/: NodoArbolTitulo.cpp  NodoArbolTitulo.h
Backend/EstructurasDeDatos/ArbolBFecha/: ArbolBFecha.cpp  ArbolBFecha.h
Backend/EstructurasDeDatos/ArbolBFecha/NodoArbolB/: NodoArbolB.cpp  NodoArbolB.h
Backend/EstructurasDeDatos/ArbolBGenero/: ArbolBGenero.cpp  ArbolBGenero.h
Backend/EstructurasDeDatos/ArbolBGenero/NodoArbolBMas/: NodoArbolBMas.cpp  NodoArbolBMas.h
Backend/EstructurasDeDatos/ArbolBGenero/NodoArbolBMasHoja/: NodoArbolBMasHoja.cpp  NodoArbolBMasHoja.h
Backend/EstructurasDeDatos/ArbolBGenero/NodoArbolBMasInterno/: NodoArbolBMasInterno.cpp  NodoArbolBMasInterno.h
Backend/EstructurasDeDatos/ListaOrdenada/: ListaOrdenada.cpp  ListaOrdenada.h
Backend/EstructurasDeDatos/ListaOrdenada/NodoDoble/: NodoDoble.cpp  NodoDoble.h
Backend/EstructurasDeDatos/ListaSimple/: ListaSimpleEnlazada.cpp  ListaSimpleEnlazada.h
Backend/EstructurasDeDatos/ListaSimple/ListaSimpleEnlazada/: ListaSimpleEnlazada.h
Backend/EstructurasDeDatos/ListaSimple/NodoSimple/: NodoSimple.cpp  NodoSimple.h
Backend/EstructurasDeDatos/ListaSimpleSinOrdenar/: ListaSimpleSinOrdenar.cpp  ListaSimpleSinOrdenar.h
Backend/EstructurasDeDatos/ListaSimpleSinOrdenar/NodoSimple/: NodoSimple.h
Backend/Excepciones/: ArchivoInvalidoException.h  BusquedaSinResultadoException.h  ElementoDuplicadoException.h  LibroDuplicadoException.h
Backend/Iteradores/: IteradorListaSimple.cpp  IteradorListaSimple.h
Backend/Iteradores/IteradorLED/: IteradorLED.cpp  IteradorLED.h
Backend/LectorArchivo/: LectorArchivo.cpp  LectorArchivo.h
Backend/Libro/: Libro.cpp  Libro.h
Frontend/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Frontend/FormAgregarLibro/: formagregarlibro.cpp  formagregarlibro.h  formagregarlibro.ui
Frontend/FormBusquedaLibro/: formbusquedalibro.cpp  formbusquedalibro.h  formbusquedalibro.ui
Frontend/FormEliminacionLibro/: formeliminacionlibro.cpp  formeliminacionlibro.h  formeliminacionlibro.ui
Frontend/MensajeArchivoError/: dialogerrorarchivo.cpp  dialogerrorarchivo.h  dialogerrorarchivo.ui
Frontend/ResultadosBusqueda/: resultadosbusqueda.cpp  resultadosbusqueda.h  resultadosbusqueda.ui
Frontend/carga_archivo/: carga_archivo.cpp  carga_archivo.h  carga_archivo.ui
MiApp/: BibliotecaMagicaEDDPro1  run.sh
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-release/BibliotecaMagicaEDDPro1_autogen/: deps  mocs_compilation.cpp
build-release/BibliotecaMagicaEDDPro1_autogen/HE2PDO2QGV/: moc_formeliminacionlibro.cpp
build-release/BibliotecaMagicaEDDPro1_autogen/QBUA26SP6A/: moc_resultadosbusqueda.cpp
build-release/BibliotecaMagicaEDDPro1_autogen/S64EGU2CLT/: moc_formbusquedalibro.cpp
build-release/BibliotecaMagicaEDDPro1_autogen/V57I63ONWH/: moc_mainwindow.cpp
build-release/BibliotecaMagicaEDDPro1_autogen/ZOGUSZ6WDC/: moc_dialogerrorarchivo.cpp
build-release/BibliotecaMagicaEDDPro1_autogen/include/: ui_dialogerrorarchivo.h  ui_formbusquedalibro.h  ui_formeliminacionlibro.h  ui_mainwindow.h  ui_resultadosbusqueda.h
